@@ -15,6 +15,10 @@ repositories {
 	maven { url 'https://repo.spring.io/snapshot' }
 }
 
+compileJava {
+	options.compilerArgs += ['--enable-preview']
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.kafka:spring-kafka'
